--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -35,6 +35,7 @@ textarea {
 
 .textarea-wrapper {
   width: 50em;
+  max-width: 100%;
   position: relative;
 
   .notice {
@@ -68,11 +69,6 @@ select {
   button + button {
     margin-left: 10px;
   }
-}
-
-label + select,
-label + input {
-  margin-left: 10px;
 }
 
 .template {
