--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,9 @@
               <li><%= link_to "Create New", new_character_path %></li>
             </ul>
           </li>
+          <% if current_user.is_storyteller %>
+            <li><%= link_to "Tools", storytellers_path %></li>
+          <% end %>
           <li><%= link_to "Settings", edit_user_registration_path %></li>
         <% end %>
         <li><a href="http://askagainlater.com/" rel="external" target="_blank">Info Site</a></li>
