Add link to print character sheets

--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -2,6 +2,8 @@ h2 Storyteller Dashboard
 
 ul
   li
+    = link_to "Print Character Sheets", characters_print_path, target: '_blank'
+  li
     = link_to "Advantages", storytellers_advantages_path
   li
     = link_to "Challenges", storytellers_challenges_path
