Filter challenge lists and add new challenge button

--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -84,10 +84,13 @@
 
   h3.section Challenges
   .form-row
+    div
+      = label_tag "Creature Challenges"
     select name="challenges" id="challenges"
       - @challenges.each do |challenge|
         option value="#{challenge.id}" data-is-custom="#{challenge.is_custom}" #{challenge.name}
     = button_tag 'Add', type: 'button', class: 'button', id: "challenge-add"
+    = button_tag 'New Challenge', type: 'button', class: 'button', id: 'challenge-add-custom', "data-challenge-id": @custom_challenge.id
 
   ul#challenges-list
     - @character.character_has_challenges.each do |challenge|
