--- a/app/views/characters/index.slim
+++ b/app/views/characters/index.slim
@@ -28,7 +28,8 @@
           td
             = character.get_status
           td
-            = link_to "Edit", edit_character_path(character)
+            - unless character.status > 0 and !current_user.is_storyteller
+              = link_to "Edit", edit_character_path(character)
           td
             = form_tag(character_path(character), method: 'DELETE') do
               = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this character?");', class: 'button'
