--- a/app/views/storytellers/questionnaire_items/index.slim
+++ b/app/views/storytellers/questionnaire_items/index.slim
@@ -1,26 +1,31 @@
 .data-entry-questionnaire
   h2 Questionnaire
 
-  = form_for @questionnaire_item, url: '/storytellers/questionnaire', method: 'POST' do |f|
+  = form_tag '/storytellers/questionnaire', method: 'POST' do
     ul#questionnaire
-  		- if @questionnaire_items.present?
-  			- @questionnaire_items.order(:order).each do |question|
-  				li
-  					= label_tag :question
-  					= text_field_tag "questionnaire_item[][question]", question.question
-  					= hidden_field_tag "questionnaire_item[][id]", question.id
-  					= hidden_field_tag "questionnaire_item[][order]", question.order, class: 'order-field'
-  					i.fa.fa-minus-circle.delete
+      - if @sections.present?
+        - @sections.each do |section|
+          li
+            .container
+              = label_tag :title, "Section Title", class: 'handle'
+              = text_field_tag "questionnaire_section[][title]", section.title
+              = label_tag :instructions
+              = text_area_tag "questionnaire_section[][instructions]", section.instructions
+              = hidden_field_tag "questionnaire_section[][id]", section.id
+              = hidden_field_tag "questionnaire_section[][order]", section.order, class: 'order-field'
+              i.fa.fa-minus-circle.delete
 
-    .template
-  		li
-  			= label_tag :question
-  			= text_field_tag "questionnaire_item[][question]"
-  			= hidden_field_tag "questionnaire_item[][id]"
-  			= hidden_field_tag "questionnaire_item[][order]", "", class: 'order-field'
-
-    .button-row
-      = button_tag "Add Question", type: 'button', id: 'add', class: 'button'
-      = button_tag "Save", type: 'submit', class: 'button'
+              div
+                strong Questions:
+              ul
+                - if section.questionnaire_items.present?
+                  - section.questionnaire_items.order(:order).each do |question|
+                    li
+                      .container
+                        = label_tag :question, "Question Text", class: 'handle'
+                        = text_field_tag "questionnaire_item[][question]", question.question
+                        = hidden_field_tag "questionnaire_item[][id]", question.id
+                        = hidden_field_tag "questionnaire_item[][order]", question.order, class: 'order-field'
+                        i.fa.fa-minus-circle.delete
 
 = javascript_include_tag 'questionnaire', 'data-turbolinks-track' => true
