--- a/app/assets/stylesheets/pages/_data_entry.scss
+++ b/app/assets/stylesheets/pages/_data_entry.scss
@@ -44,16 +44,41 @@
   }
 
   #questionnaire {
-    > li {
+    li {
       position: relative;
-      margin-bottom: 20px;
-      padding-bottom: 20px;
-      border-bottom: 1px $green solid;
 
       .delete {
         position: absolute;
         top: 2px;
         right: 0;
+      }
+    }
+
+    > li {
+      margin-bottom: 20px;
+      padding-bottom: 20px;
+      border-bottom: 1px $green solid;
+      > .container {
+        > input[type="text"] {
+          font-size: 24px;
+          margin-bottom: 16px;
+        }
+        > textarea {
+          margin-bottom: 16px;
+        }
+
+        .subsection-title {
+          margin-top: 1em;
+          font-size: 18px;
+          font-weight: bold;
+          margin-bottom: .5em;
+        }
+      }
+
+      ul {
+        li {
+          margin-bottom: 1em;
+        }
       }
     }
   }
