--- a/app/views/storytellers/questionnaire_items/index.slim
+++ b/app/views/storytellers/questionnaire_items/index.slim
@@ -23,9 +23,15 @@
                       .container
                         = label_tag :question, "Question Text", class: 'handle'
                         = text_field_tag "questionnaire_section[][questionnaire_items][][question]", question.question
+                        .controls
+                          span.required
+                            = check_box_tag "questionnaire_section[][questionnaire_items][][required]", true, question.required
+                            = label_tag :required, "Is Required?"
+                          span.extended
+                            = check_box_tag "questionnaire_section[][questionnaire_items][][extended]", true, question.extended
+                            = label_tag :required, "Extended Questionnaire"
                         = hidden_field_tag "questionnaire_section[][questionnaire_items][][id]", question.id
                         = hidden_field_tag "questionnaire_section[][questionnaire_items][][order]", question.order, class: 'order-field'
-                        = hidden_field_tag "questionnaire_section[][questionnaire_items][][questionnaire_section_id]", question.questionnaire_section_id, class: 'section-id-field'
                         i.fa.fa-minus-circle.delete
 
               .button-row.center
@@ -59,9 +65,15 @@
       .container
         = label_tag :question, "Question Text", class: 'handle'
         = text_field_tag "questionnaire_section[][questionnaire_items][][question]", ""
+        .controls
+          span.required
+            = check_box_tag "questionnaire_section[][questionnaire_items][][required]", true, true
+            = label_tag :required, "Is Required?"
+          span.extended
+            = check_box_tag "questionnaire_section[][questionnaire_items][][extended]", true, false
+            = label_tag :required, "Extended Questionnaire"
         = hidden_field_tag "questionnaire_section[][questionnaire_items][][id]", ""
         = hidden_field_tag "questionnaire_section[][questionnaire_items][][order]", "", class: 'order-field'
-        = hidden_field_tag "questionnaire_section[][questionnaire_items][][questionnaire_section_id]", "", class: 'section-id-field'
         i.fa.fa-minus-circle.delete
 
 = javascript_include_tag 'questionnaire', 'data-turbolinks-track' => true
