--- a/app/assets/stylesheets/pages/_data_entry.scss
+++ b/app/assets/stylesheets/pages/_data_entry.scss
@@ -10,6 +10,12 @@
     margin-bottom: 30px;
     flex-shrink: 1;
   }
+
+  table.table#questionnaire {
+    tbody tr {
+      cursor: move;
+    }
+  }
 }
 
 .data-entry-form {
@@ -36,7 +42,6 @@
   form {
     max-width: 50em;
     width: 100%;
-    margin: 0 auto;
   }
 
   label.handle {
@@ -47,8 +52,26 @@
     display: none;
   }
 
-  #questionnaire {
+  .section {
+    input[type="text"] {
+      font-size: 24px;
+      margin-bottom: 16px;
+    }
+    textarea {
+      margin-bottom: 16px;
+    }
+  }
+
+  .subsection-title {
+    margin-top: 1em;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: .5em;
+  }
+
+  ul {
     li {
+      margin-bottom: 1em;
       position: relative;
 
       .delete {
@@ -56,44 +79,15 @@
         top: 2px;
         right: 0;
       }
-    }
 
-    > li {
-      margin-bottom: 20px;
-      padding-bottom: 20px;
-      border-bottom: 1px $green solid;
+      .container {
+        .controls {
+          text-align: right;
+          font-size: 14px;
+          margin: 5px 0;
 
-      > .container {
-        > input[type="text"] {
-          font-size: 24px;
-          margin-bottom: 16px;
-        }
-        > textarea {
-          margin-bottom: 16px;
-        }
-
-        .subsection-title {
-          margin-top: 1em;
-          font-size: 18px;
-          font-weight: bold;
-          margin-bottom: .5em;
-        }
-      }
-
-      ul {
-        li {
-          margin-bottom: 1em;
-
-          .container {
-            .controls {
-              text-align: right;
-              font-size: 14px;
-              margin: 5px 0;
-
-              span {
-                margin-left: 10px;
-              }
-            }
+          span {
+            margin-left: 10px;
           }
         }
       }
