fix javascript on new/edit page

--- a/app/assets/stylesheets/pages/_data_entry.scss
+++ b/app/assets/stylesheets/pages/_data_entry.scss
@@ -18,6 +18,15 @@
   }
 }
 
+.data-entry-show-questionnaire {
+  .instructions {
+    max-width: 50em;
+    border-bottom: 1px $green solid;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
+}
+
 .data-entry-form {
   label {
     font-weight: bold;
