--- a/app/views/storytellers/questionnaire_sections/edit.slim
+++ b/app/views/storytellers/questionnaire_sections/edit.slim
@@ -7,3 +7,19 @@
   = form_for @questionnaire_section, url: {action: 'update'}, method: 'PATCH' do |f|
     = f.hidden_field :id
     = render partial: 'form', locals: {f: f}
+
+  .question-template
+    li
+      .container
+        = label_tag :question, "Question Text", class: 'handle'
+        = text_field_tag "questionnaire_section[questionnaire_items_attributes][][question]", ""
+        .controls
+          span.required
+            = check_box_tag "questionnaire_section[questionnaire_items_attributes][][required]", true, true
+            = label_tag :required, "Is Required?"
+          span.extended
+            = check_box_tag "questionnaire_section[questionnaire_items_attributes][][extended]", true, false
+            = label_tag :required, "Extended Questionnaire"
+        = hidden_field_tag "questionnaire_section[questionnaire_items_attributes][][id]", ""
+        = hidden_field_tag "questionnaire_section[questionnaire_items_attributes][][order]", "", class: 'order-field'
+        i.fa.fa-minus-circle.delete
