--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -28,15 +28,14 @@ textarea {
 }
 
 textarea {
-  max-width: 100%;
-  width: 50em;
+  width: 100%;
   height: 150px;
   box-sizing: border-box;
   padding-bottom: 22px;
 }
 
-.textarea-wrapper {
-  width: 50em;
+.textarea-wrapper, .question-text {
+  max-width: 50em;
   position: relative;
 
   .notice {
