--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -10,4 +10,4 @@ ul
   li
     = link_to "True Selves", storytellers_true_selves_path
   li
-    = link_to "Questionnaire", '/storytellers/questionnaire'
+    = link_to "Questionnaire", storytellers_questionnaire_sections_path
