Adds health to editable stat block
Also adds auto calculation on front end.

--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -122,6 +122,9 @@
     h3.section Derived Stats
     .derived-stats
       .stat
+        = f.label :health
+        = f.number_field :health
+      .stat
         = f.label :willpower
         = f.number_field :willpower
       .stat
