Add button-text class and apply to all 'delete' buttons

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -56,3 +56,13 @@
     }
   }
 }
+
+.button-text {
+  border: none;
+  padding: 0;
+  font-size: 1em;
+  color: $green;
+  text-decoration: underline;
+  background-color: transparent;
+  cursor: pointer;
+}
