--- a/app/views/storytellers/advantages/index.slim
+++ b/app/views/storytellers/advantages/index.slim
@@ -23,4 +23,4 @@
               = link_to "Edit", edit_storytellers_advantage_path(advantage)
             td
               = form_tag(storytellers_advantage_path(advantage), method: 'DELETE') do
-                = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this advantage?");', class: 'button'
+                = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this advantage?");', class: 'button-text'
