--- a/app/views/storytellers/challenges/index.slim
+++ b/app/views/storytellers/challenges/index.slim
@@ -1,7 +1,7 @@
 .data-entry-index
   .breadcrumbs
     = render_breadcrumbs
-    
+
   h2 Challenges
 
   .button-row.right
@@ -23,4 +23,4 @@
               = link_to "Edit", edit_storytellers_challenge_path(challenge)
             td
               = form_tag(storytellers_challenge_path(challenge), method: 'DELETE') do
-                = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this challenge?");', class: 'button'
+                = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this challenge?");', class: 'button-text'
