--- a/app/views/storytellers/questionnaire_sections/index.slim
+++ b/app/views/storytellers/questionnaire_sections/index.slim
@@ -30,7 +30,7 @@
                 = link_to "Edit Section & Questions", edit_storytellers_questionnaire_section_path(section)
               td
                 = form_tag(storytellers_questionnaire_section_path(section), method: 'DELETE') do
-                  = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this questionnaire section? This will also delete all the questions in this section.");', class: 'button'
+                  = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this questionnaire section? This will also delete all the questions in this section.");', class: 'button-text'
 
     .button-row
       = submit_tag "Save Ordering", id: 'save-order'
