--- a/app/views/character_mailer/character_submission.html.erb
+++ b/app/views/character_mailer/character_submission.html.erb
@@ -3,20 +3,6 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
-  <body>
-    <h1>Dead City Productions Character System</h1>
-    <h2>New Character Submission</h2>
-    <p>Hi, <%= @st_name %>!</p>
-    <p>You've received a new character submission from <%= @user %> for your chronicle "<%= @character.chronicle.title %>. To review this submission, <a href="http://characters.deadcityproductions.com#{character_path(@character)}">click here.</a>.</p>
-  </body>
-</html>
-
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
   <style type="text/css">
     body {
       text-align: center;
@@ -63,7 +49,7 @@
         <td bgcolor="#FFFFFF" color="#333333" class="content-body">
           <h2>New Character Submission from <%= @character.user.name %></h2>
           <p>Hi, <%= @st_name %>!</p>
-          <p>You've received a new character submission, "#{@character.name}" from <%= @user.name %>. To review this submission, <a href="<%= base_url %><%= character_path(@character) %>">click here.</a>.</p>
+          <p>You've received a new character submission, "#{@character.name}" from <%= @user %>. To review this submission, <a href="<%= base_url %><%= character_path(@character) %>">click here.</a>.</p>
         </td>
       </tr>
     </table>
