--- a/app/views/character_mailer/character_approval.txt.erb
+++ b/app/views/character_mailer/character_approval.txt.erb
@@ -2,4 +2,4 @@ Character Approved
 
 Hi, <%= @user.name %>!
 
-Your character, <%= @character.name %>, has been approved. Congratulations! To see your finalized character sheet, go here: <%= base_url %><%= character_path(@character) %>
+Your character, <%= @character.name %>, has been approved. Congratulations! To see your finalized character sheet, go here: <%= root_url %>characters/<%= @character %>
