--- a/app/views/character_mailer/character_submission.txt.erb
+++ b/app/views/character_mailer/character_submission.txt.erb
@@ -2,4 +2,4 @@ New Character Submission from <%= @character.user.name %>
 
 Hi, <%= @st_name %>!
 
-You've received a new character submission, "#{@character.name}" from <%= @user.name %>. To review this submission, go here: <%= base_url %><%= character_path(@character) %>
+You've received a new character submission, "<%= @character.name %>", from <%= @user.name %>. To review this submission, go here: <%= root_url %>characters/<%= @character.id %>
