--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -112,7 +112,7 @@
 
   h3.section Questionnaire
 
-  .questionnaire
+  .questionnaire.accordion
     - @questionnaire_sections.each do |qs|
       .questionnaire-section
         h4 #{qs.title}
