fix issues with returning to first page of questionnaire

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -124,8 +124,12 @@ select {
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    margin: 0 10px;
     transition: .5s;
+    margin-right: 20px;
+
+    &:last-of-type {
+      margin-right: 0;
+    }
 
     &.checked {
       border-color: $green;
