split wizard form first page out into partial

--- a/app/assets/stylesheets/pages/_character.scss
+++ b/app/assets/stylesheets/pages/_character.scss
@@ -128,6 +128,11 @@ h3.attributes, h3.skills-training {
     .content {
       padding: 10px 20px;
     }
+
+    label + input,
+    label + select {
+      margin-right: 10px;
+    }
   }
 }
 
