--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -163,10 +163,11 @@
 
 
 
-  = f.submit "Save"
-  - if @character.status == 0 and (current_user == @character.user or @character.user.nil?)
-    = hidden_field_tag "status", @character.status
-    = f.submit "Save and Submit", id: 'save-submit'
+  .button-row
+    = f.submit "Save"
+    - if @character.status == 0 and (current_user == @character.user or @character.user.nil?)
+      = hidden_field_tag "status", @character.status
+      = f.submit "Save and Submit", id: 'save-submit'
 
   .overlay#advantages-overlay
     .modal
